# python-stream-processor

./: .gitignore  Dockerfile  README.md  env.example  main.py  progress.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: README.md  architecture.md  configuration.md  deployment.md  getting-started.md
docs/development/: contributing.md  testing.md
docs/features/: archiving.md  watermarking.md
docs/operations/: cli-commands.md  monitoring.md  troubleshooting.md
docs/services/: cleanup-service.md  consumer.md  hls-generator.md  offline-checker.md  redis-stores.md  storage-backends.md
scripts/: input.txt  migrate_local_to_gcs.py  test_segment_generation.sh
src/stream_processor/: __init__.py  main.py
src/stream_processor/config/: __init__.py  settings.py
src/stream_processor/consumer/: __init__.py  pulsar_consumer.py
src/stream_processor/model/: __init__.py  events.py
src/stream_processor/scripts/: __init__.py  remux_archive_segments.py  repair_archive_playlist.py
src/stream_processor/service/: __init__.py  archive_service.py  cleanup_service.py  device_reset_service.py  hls_generator.py  offline_checker.py  redis_playlist_store.py  redis_session_store.py  session_tracker.py  storage_backend.py  watermark_service.py
src/stream_processor/utils/: __init__.py  logger.py  metrics.py  path.py
tests/: __init__.py  conftest.py  test_consumer_workers.py  test_hls_generator.py  test_models.py  test_redis_playlist_store.py  test_session_data.py  test_watermark_service.py
