[project]
name = "stream-processor"
version = "0.1.0"
description = "Pulsar consumer for HLS live stream generation with FFmpeg - processes device frames into 24h rolling video streams"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "MicroboxLabs", email = "contact@microboxlabs.com" }
]
keywords = ["pulsar", "hls", "ffmpeg", "streaming", "video", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pulsar-client>=3.5.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "google-cloud-storage>=2.14.0",
    "asyncpg>=0.29.0",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.21.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
stream-processor = "stream_processor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stream_processor"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

